--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <div class="header-rigth">
             <ul class="header-rigth__items">
                 <li class="rigth__item">
-                    Город: <a href="">Киев</a>
+                    Город: <button class="city__button">Киев</button>
                 </li>
                 <li class="rigth__item">
-                    Здравствуйте, <a href="">войдите в личный кабинет</a>
+                    Здравствуйте, <button class="rigth-sign_in__button">войдите в личный кабинет</button>
                 </li>
             </ul>
         </div>
@@ -46,27 +46,166 @@
                 <div>
                     <ul class="header-down__rigth">
                         <li class="down__rigth">
-                            <img src="images/libra.png" alt="" class="down__rigth__image_one">
+                            <button>
+                                <img src="images/libra.png" alt="" class="down__rigth__image_one">
+                            </button>
                         </li>
                         <li class="down__rigth">
-                            <img src="images/like.png" alt="" class="down__rigth__image_two">
+                            <button>
+                                <img src="images/like.png" alt="" class="down__rigth__image_two">
+                            </button>
                         </li>
                         <li class="down__rigth">
-                            <img src="images/shop.png" alt="" class="down__rigth__image_tree">
+                            <button>
+                                <img src="images/shop.png" alt="" class="down__rigth__image_tree">
+                            </button>
                         </li>
                     </ul>
                 </div>
             </ul>
         </div>
     </header>
+    <div class="down__right__down">
+        <ul class="down__right__down__items">
+            <li class="down__right__down__item">
+                <img src="images/libra.png" alt="">
+            </li>
+            <div class="down--right__down">
+                <li class="down--right__down__item">
+                    <h5>Нет товаров в сравнении</h5>
+                </li>
+                <li class="down--right__down__item">
+                    <p>
+                        Добавляйте товары к сравнению характеристик и выбирайте самый подходящий вам товар
+                    </p>
+                </li>
+            </div>
+        </ul>
+    </div>
+    <div class="down__right__down__two">
+        <ul class="down__right__down__items">
+            <li class="down__right__down__item">
+                <img src="images/like.png" alt="">
+            </li>
+            <div class="down--right__down">
+                <li class="down--right__down__item">
+                    <h5>Список желаний пуст</h5>
+                </li>
+                <li class="down--right__down__item">
+                    <p>
+                        Добавляйте товары в список желаний, делитесь списками с друзьями и обсуждайте товары вместе.
+                    </p>
+                </li>
+            </div>
+        </ul>
+    </div>
+    <div class="down__right__down__tree">
+        <ul class="down__right__down__items">
+            <li class="down__right__down__item">
+                <img src="images/shop.png" alt="">
+            </li>
+            <div class="down--right__down">
+                <li class="down--right__down__item">
+                    <h5>Ваша корзина пуста</h5>
+                </li>
+                <li class="down--right__down__item">
+                    <p>
+                        Добавляйте понравившиеся товары в корзину
+                    </p>
+                </li>
+            </div>
+        </ul>
+    </div>
     <div class="black__brop"></div>
-    <div class="catalog__menu"></div>
+    <div class="catalog__menu">
+        <div class="main-catalog">
+            <ul class="main-catalog__items">
+                <li class="main-catalog__item">
+                    <a href="#" id="catalog__one">Ноутбуки и компьютеры</a>
+                    <img src="images/next.png" alt="" style="width: 10px; height: 10px;">
+                </li>
+                <li class="main-catalog__item">
+                    <a href="" id="catalog__two">Спорт и увлечения</a>
+                    <img src="images/next.png" alt="" style="width: 10px; height: 10px;">
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="main-catalog__menu__pc">
+        <div class="catalog__menu__pc">
+            <ul class="catalog__menu__pc__items">
+                <h4>Популярные категории</h4>
+                <li class="catalog__menu__pc__item">Ноутбуки</li>
+                <li class="catalog__menu__pc__item">Планшеты</li>
+                <li class="catalog__menu__pc__item">Видеокарты</li>
+                <li class="catalog__menu__pc__item">Мониторы</li>
+                <li class="catalog__menu__pc__item">Процессоры</li>
+            </ul>
+            <ul class="catalog__menu__pc__items">
+                <h4>Компьютеры</h4>
+                <li class="catalog__menu__pc__item">Мониторы</li>
+                <li class="catalog__menu__pc__item">Мыши</li>
+                <li class="catalog__menu__pc__item">Клавиатура</li>
+                <li class="catalog__menu__pc__item">Коврики</li>
+                <li class="catalog__menu__pc__item">Корпуса</li>
+            </ul>
+            <ul class="catalog__menu__pc__items">
+                <h4>Ноутбуки</h4>
+                <li class="catalog__menu__pc__item">Apple</li>
+                <li class="catalog__menu__pc__item">Asus</li>
+                <li class="catalog__menu__pc__item">Dell</li>
+                <li class="catalog__menu__pc__item">Lenovo</li>
+                <li class="catalog__menu__pc__item">Acer</li>
+            </ul>
+            <ul class="catalog__menu__pc__items">
+                <h4>Планшеты</h4>
+                <li class="catalog__menu__pc__item">Зашитное стекло</li>
+                <li class="catalog__menu__pc__item">Пленка</li>
+                <li class="catalog__menu__pc__item">Чехол</li>
+                <li class="catalog__menu__pc__item">Большой</li>
+                <li class="catalog__menu__pc__item">Маленький</li>
+            </ul>
+        </div>
+    </div>
+    <div class="main-catalog__menu__sp">
+        <div class="catalog__menu__sp">
+            <ul class="catalog__menu__sp__items">
+                <h4>Популярные категории</h4>
+                <li class="catalog__menu__sp__item">Велосипеды</li>
+                <li class="catalog__menu__sp__item">Баскетбол</li>
+                <li class="catalog__menu__sp__item">Одежда</li>
+                <li class="catalog__menu__sp__item">Футбол</li>
+                <li class="catalog__menu__sp__item">Термобелье</li>
+            </ul>
+            <ul class="catalog__menu__sp__items">
+                <h4>Велосипеды</h4>
+                <li class="catalog__menu__sp__item">Аксессуары</li>
+                <li class="catalog__menu__sp__item">Шины</li>
+                <li class="catalog__menu__sp__item">Рамы</li>
+                <li class="catalog__menu__sp__item">Шлемы</li>
+                <li class="catalog__menu__sp__item">Перчатки</li>
+            </ul>
+            <ul class="catalog__menu__sp__items">
+                <h4>Баскетбол</h4>
+                <li class="catalog__menu__sp__item">Мячи</li>
+                <li class="catalog__menu__sp__item">Насосы</li>
+                <li class="catalog__menu__sp__item">Кросовки</li>
+                <li class="catalog__menu__sp__item">Аксессуары</li>
+                <li class="catalog__menu__sp__item">Форма</li>
+            </ul>
+            <ul class="catalog__menu__sp__items">
+                <h4>Одежда</h4>
+                <li class="catalog__menu__sp__item">Футболки</li>
+                <li class="catalog__menu__sp__item">Кофты</li>
+                <li class="catalog__menu__sp__item">Термобелье</li>
+                <li class="catalog__menu__sp__item">Кросовки</li>
+                <li class="catalog__menu__sp__item">Шорты</li>
+            </ul>
+        </div>
+    </div>
     <div class="number__menu">
         <h4>Контактные телефоны</h4>
-        <button class="close__button">
-            <span class="line line-1"></span>
-            <span class="line line-2"></span>
-        </button>
+        <button class="close"></button>
         <div class="contacts">
             <ul class="contacts__items">
                 <li class="contacts__item">
@@ -84,6 +223,21 @@
                 <li class="contacts__item">
                     <a href="">+38 044 502-10-79</a>
                 </li>
+                <li class="contacts__item">
+                    <p>График работы call-центра:</p>
+                </li>
+                <div class="call__time">
+                    <ul class="call__time__items">
+                        <li class="call__time__item">В будние:</li>
+                        <li class="call__time__item">Суббота:</li>
+                        <li class="call__time__item">Воскресенье:</li>
+                    </ul>
+                    <ul class="call__time__items">
+                        <li class="call__time__item">с 8:00 до 21:00</li>
+                        <li class="call__time__item">с 9:00 до 20:00</li>
+                        <li class="call__time__item">c 10:00 до 19:00</li>
+                    </ul>
+                </div>
             </ul>
         </div>
     </div>
@@ -91,29 +245,129 @@
          <h3 class="main-title">Выберите свой город</h3>
          <p class="paragraph__up">Доставляем заказы по всей Украине!</p>
          <ul class="main-list__city">
-             <li class="list__city">Киев</li>
-             <li class="list__city">Одесса</li>
-             <li class="list__city">Днепр</li>
+             <li class="list__city">
+                 <a href="" class="Kiev__city">Киев</a>
+             </li>
+             <li class="list__city">
+                 <a href="">Одесса</a>
+             </li>
+             <li class="list__city">
+                 <a href="">Днепр</a>
+             </li>
          </ul>
          <ul class="main-list__city">
-             <li class="list__city">Харьков</li>
-             <li class="list__city">Запорожье</li>
-             <li class="list__city">Львов</li>
+             <li class="list__city">
+                 <a href="">Харьков</a>
+             </li>
+             <li class="list__city">
+                 <a href="">Запорожье</a>
+             </li>
+             <li class="list__city">
+                 <a href="">Львов</a>
+             </li>
          </ul>
          <ul class="inputs">
-             <li class="input">
-                <label for="">Введите населенный пункт Украины</label>
+             <li class="input__up">
+                <label for="text">Введите населенный пункт Украины</label>
              </li>
-             <li class="input">
+             <li class="input__city">
                 <input type="text" name="" id="" placeholder="Выбирите свой город">
              </li>
          </ul>
          <p class="paragraph__down">
             Например, <a href="">Котюжины</a>
          </p>
+         <hr class="city__line">
          <p class="paragraph__down__two">
             Выбор города поможет предоставить актуальную информацию о наличии товара, его цены и способов доставки в вашем городе! Это поможет сохранить больше свободного времени для вас!
          </p>
+    </div>
+    <div class="sign_in">
+        <div class="sign_in__left">
+            <h4 class="sign_in__title__left">Вход</h4>
+            <label for="email">Эл. почта или телефон</label>
+            <input type="email" name="" id="email">
+            <label for="password">Пароль</label>
+            <input type="password" name="" id="password">
+            <div class="sign_in__checkbox">
+                <input type="checkbox" name="" id="checkbox">
+                <label for="checkbox">Запомнить меня</label>
+            </div>
+            <button class="sign_in__button">Войти</button>
+            <button class="sign_in__reg">Зарегистрироваться</button>
+        </div>
+        <div class="sign_in__center">
+            <hr class="sign_in__line">
+            Или
+            <hr class="sign_in__line">
+        </div>
+        <div class="sing_in_rigth">
+            <h5 class="sign_in__title__rigth">Войти как пользователь</h5>
+            <button class="sign_in__button__facebook">
+                <img src="images/facebook.png" alt="" style="width: 15px; height: 15px;">
+                Facebook
+            </button>
+            <button class="sign_in__button__google">
+                <img src="images/google.png" alt="" style="width: 15px; height: 15px;">
+                Google
+            </button>
+        </div>
+    </div>
+    <div class="check_in">
+        <div class="check_in__left">
+            <ul class="check_in__left__items">
+                <li class="left--item">
+                    <h4>Вход</h4>
+                </li>
+                <li class="left--item">
+                    <label for="">Ваше имя</label>
+                    <input type="text" name="" id="">
+                </li>
+                <li class="left--item">
+                    <label for="">Эл. почта</label>
+                    <input type="email" name="" id="">
+                </li>
+                <li class="left--item">
+                    <label for="">Придумайте пароль</label>
+                    <div class="password__check_in">
+                        <input type="password" name="" id="password__check_in">
+                        <button class="eye__button">
+                            <img src="images/private.png" alt="" >
+                        </button>
+                    </div>
+                </li>
+                <li class="left--item">
+                    <p>
+                        Пароль должен быть не менее 6 символов, содержать цифры и латинские буквы, в том числе заглавные, и не должен совпадать с именем и эл. почтой
+                    </p>
+                </li>
+                <li class="left__item">
+                    <p>
+                        Регистрируясь, вы соглашаетесь с <a href="">пользовательским соглашением</a> 
+                    </p>
+                </li>
+                <li class="left__item">
+                    <button class="check_in__buttom">Зарегистрироваться</button>
+                    <button class="check_in__buttom__two">Я уже зарегистрирован</button>
+                </li>    
+            </ul>
+        </div>
+        <div class="check_in__center">
+            <hr class="check_in__center__line">
+            Или
+            <hr class="check_in__center__line">
+        </div>
+        <div class="check_in__rigth">
+            <h5 class="check_in__title__rigth">Войти как пользователь</h5>
+            <button class="check_in__button__facebook">
+                <img src="images/facebook.png" alt="" style="width: 20px; height: 20px;">
+                Facebook
+            </button>
+            <button class="check_in__button__google">
+                <img src="images/google.png" alt="" style="width: 20px; height: 20px;">
+                Google
+            </button>
+        </div>
     </div>
     <script src="shered.js"></script>
 </body>
