--- a/index.html
+++ b/index.html
@@ -135,35 +135,75 @@
         <div class="catalog__menu__pc">
             <ul class="catalog__menu__pc__items">
                 <h4>Популярные категории</h4>
-                <li class="catalog__menu__pc__item">Ноутбуки</li>
-                <li class="catalog__menu__pc__item">Планшеты</li>
-                <li class="catalog__menu__pc__item">Видеокарты</li>
-                <li class="catalog__menu__pc__item">Мониторы</li>
-                <li class="catalog__menu__pc__item">Процессоры</li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Ноутбуки</a>
+                </li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Планшеты</a>
+                </li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Видеокарты</a>
+                </li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Мониторы</a>
+                </li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Процессоры</a>
+                </li>
             </ul>
             <ul class="catalog__menu__pc__items">
                 <h4>Компьютеры</h4>
-                <li class="catalog__menu__pc__item">Мониторы</li>
-                <li class="catalog__menu__pc__item">Мыши</li>
-                <li class="catalog__menu__pc__item">Клавиатура</li>
-                <li class="catalog__menu__pc__item">Коврики</li>
-                <li class="catalog__menu__pc__item">Корпуса</li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Мониторы</a>
+                </li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Мыши</a>
+                </li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Клавиатура</a>
+                </li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Коврики</a>
+                </li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Корпуса</a>
+                </li>
             </ul>
             <ul class="catalog__menu__pc__items">
                 <h4>Ноутбуки</h4>
-                <li class="catalog__menu__pc__item">Apple</li>
-                <li class="catalog__menu__pc__item">Asus</li>
-                <li class="catalog__menu__pc__item">Dell</li>
-                <li class="catalog__menu__pc__item">Lenovo</li>
-                <li class="catalog__menu__pc__item">Acer</li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Apple</a>
+                </li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Asus</a>
+                </li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Dell</a>
+                </li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Lenovo</a>
+                </li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Acer</a>
+                </li>
             </ul>
             <ul class="catalog__menu__pc__items">
                 <h4>Планшеты</h4>
-                <li class="catalog__menu__pc__item">Зашитное стекло</li>
-                <li class="catalog__menu__pc__item">Пленка</li>
-                <li class="catalog__menu__pc__item">Чехол</li>
-                <li class="catalog__menu__pc__item">Большой</li>
-                <li class="catalog__menu__pc__item">Маленький</li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Зашитное стекло</a>
+                </li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Пленка</a>
+                </li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Чехол</a>
+                </li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Большой</a>
+                </li>
+                <li class="catalog__menu__pc__item">
+                    <a href="">Маленький</a>
+                </li>
             </ul>
         </div>
     </div>
@@ -171,35 +211,75 @@
         <div class="catalog__menu__sp">
             <ul class="catalog__menu__sp__items">
                 <h4>Популярные категории</h4>
-                <li class="catalog__menu__sp__item">Велосипеды</li>
-                <li class="catalog__menu__sp__item">Баскетбол</li>
-                <li class="catalog__menu__sp__item">Одежда</li>
-                <li class="catalog__menu__sp__item">Футбол</li>
-                <li class="catalog__menu__sp__item">Термобелье</li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Велосипеды</a>
+                </li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Баскетбол</a>
+                </li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Одежда</a>
+                </li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Футбол</a>
+                </li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Термобелье</a>
+                </li>
             </ul>
             <ul class="catalog__menu__sp__items">
                 <h4>Велосипеды</h4>
-                <li class="catalog__menu__sp__item">Аксессуары</li>
-                <li class="catalog__menu__sp__item">Шины</li>
-                <li class="catalog__menu__sp__item">Рамы</li>
-                <li class="catalog__menu__sp__item">Шлемы</li>
-                <li class="catalog__menu__sp__item">Перчатки</li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Аксессуары</a>
+                </li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Шины</a>
+                </li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Рамы</a>
+                </li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Шлемы</a>
+                </li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Перчатки</a>
+                </li>
             </ul>
             <ul class="catalog__menu__sp__items">
                 <h4>Баскетбол</h4>
-                <li class="catalog__menu__sp__item">Мячи</li>
-                <li class="catalog__menu__sp__item">Насосы</li>
-                <li class="catalog__menu__sp__item">Кросовки</li>
-                <li class="catalog__menu__sp__item">Аксессуары</li>
-                <li class="catalog__menu__sp__item">Форма</li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Мячи</a>
+                </li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Насосы</a>
+                </li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Кросовки</a>
+                </li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Аксессуары</a>
+                </li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Форма</a>
+                </li>
             </ul>
             <ul class="catalog__menu__sp__items">
                 <h4>Одежда</h4>
-                <li class="catalog__menu__sp__item">Футболки</li>
-                <li class="catalog__menu__sp__item">Кофты</li>
-                <li class="catalog__menu__sp__item">Термобелье</li>
-                <li class="catalog__menu__sp__item">Кросовки</li>
-                <li class="catalog__menu__sp__item">Шорты</li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Футболки</a>
+                </li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Кофты</a>
+                </li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Термобелье</a>
+                </li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Кросовки</a>
+                </li>
+                <li class="catalog__menu__sp__item">
+                    <a href="">Шорты</a>
+                </li>
             </ul>
         </div>
     </div>
@@ -369,6 +449,76 @@
             </button>
         </div>
     </div>
+    <main>
+        <div class="main-images__center">
+            <img src="images/header-photo-1.jpg" alt="" class="center__image1">
+            <img src="images/header-photo-2.jpg" alt="" class="center__image2">
+            <img src="images/header-photo-3.jpg" alt="" class="center__image3">
+            <img src="images/header-photo-4.jpg" alt="" class="center__image4">
+        </div>
+    </main>
+    <footer class="main-footer">
+        <div  class="main-footer-call__time">
+            <h4>График работы Call-центра</h4>
+            <div class="footer-call__time">
+                <ul class="footer-call__time__items">
+                    <li class="footer-call__time__item">В будние:</li>
+                    <li class="footer-call__time__item">Суббота:</li>
+                    <li class="footer-call__time__item">Воскресенье:</li>
+                </ul>
+                <ul class="footer-call__time__items">
+                    <li class="footer-call__time__item">с 8:00 до 21:00</li>
+                    <li class="footer-call__time__item">с 9:00 до 20:00</li>
+                    <li class="footer-call__time__item">c 10:00 до 19:00</li>
+                </ul>
+            </div>
+        </div>
+        <div class="main-footer-download__icons">
+            <h4>Устанавливайте наши приложения</h4>
+            <div class="footer-download__icons">
+                <button class="footer-download__icon">
+                    <img src="images/app.png" alt="">
+                    Download
+                </button>
+                <button class="footer-download__icon">
+                    <img src="images/google-play.png" alt="">
+                    Download
+                </button>
+            </div>
+        </div>
+      <div class="main-info-itams">
+          <h4>Мы в социальных сетях</h4>
+        <div>
+            <ul class="info-itams">
+                <li class="info-itam">
+                   <a href="">
+                    <img src="images/instagram-sketched.png" alt=""> 
+                   </a>
+                </li>
+                <li class="info-itam">
+                    <a href="">
+                        <img src="images/twitter.png" alt="">
+                    </a>
+                </li>
+                <li class="info-itam">
+                    <a href="">
+                        <img src="images/viber.png" alt="">
+                    </a>
+                </li>
+                <li class="info-itam">
+                    <a href="">
+                        <img src="images/youtube.png" alt="">
+                    </a>
+                </li>
+                <li class="info-itam">
+                    <a href="">
+                        <img src="images/facebook-footer.png" alt="">
+                    </a>
+                </li>
+            </ul>
+        </div>
+      </div>
+    </footer>
     <script src="shered.js"></script>
 </body>
 </html>
