--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="shared.css">
     <link rel="stylesheet" href="main.css">
     <title>Rozetka на минималках</title>
 </head>
@@ -121,11 +122,11 @@
         <div class="main-catalog">
             <ul class="main-catalog__items">
                 <li class="main-catalog__item">
-                    <a href="#" id="catalog__one">Ноутбуки и компьютеры</a>
+                    <a href="computer_directory/index.html" id="catalog__one">Ноутбуки и компьютеры</a>
                     <img src="images/next.png" alt="" style="width: 10px; height: 10px;">
                 </li>
                 <li class="main-catalog__item">
-                    <a href="" id="catalog__two">Спорт и увлечения</a>
+                    <a href="sport_directory/index.html" id="catalog__two">Спорт и увлечения</a>
                     <img src="images/next.png" alt="" style="width: 10px; height: 10px;">
                 </li>
             </ul>
@@ -519,7 +520,7 @@
         </div>
       </div>
     </footer>
-    <script src="shered.js"></script>
+    <script src="shared.js"></script>
 </body>
 </html>
 
